# tonic-lb-k8s

./: AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: integration.yaml
examples/: README.md  deploy.sh  greeter-client.rs  greeter-server.rs  kind-cluster.sh
examples/docker/: Dockerfile.client  Dockerfile.server
examples/k8s/: client-job.yaml  client-rbac.yaml  namespace.yaml  server-deployment.yaml  server-service.yaml
examples/proto/: greeter.proto
src/: k8s.rs  lib.rs
