[package]
name = "tonic-lb-k8s"
description = "Kubernetes endpoint discovery for tonic gRPC load balancing"
version = "0.1.0"
repository = "https://github.com/ecliptical/tonic-lb-k8s"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
license = "MIT"
keywords = ["tonic", "grpc", "kubernetes", "discovery", "async"]
categories = ["network-programming", "asynchronous"]
edition = "2024"
rust-version = "1.88"

[dependencies]
futures = "0.3"
k8s-openapi = { version = "0.27", features = ["v1_32"] }
kube = { version = "3", default-features = false, features = ["aws-lc-rs", "client", "runtime"] }
tokio = { version = "1", features = ["sync"] }
tonic = { version = "0.14", default-features = false, features = ["channel"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
