[package]
name = "tonic-lb-k8s"
description = "Tonic client load balancing for Kubernetes"
version = "0.1.0"
repository = "https://github.com/ecliptical/tonic-lb-k8s"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
license = "MIT"
keywords = ["tonic", "grpc", "kubernetes", "discovery", "async"]
categories = ["network-programming", "asynchronous"]
edition = "2024"
rust-version = "1.88"

[dependencies]
futures = "0.3"
k8s-openapi = { version = "0.27", features = ["v1_31"] }
kube = { version = "3", default-features = false, features = ["client", "runtime", "rustls-tls", "aws-lc-rs"] }
tokio = { version = "1", features = ["sync"] }
tonic = { version = "0.14", default-features = false, features = ["channel"] }
tracing = "0.1"

[features]
examples = ["dep:tonic-prost-build"]

# TLS root certificate features - choose one based on your deployment environment:
#
# Use native/system root certificates (default behavior for kube, explicit for tonic)
# Best for containers with system CA certificates (Alpine, Debian, etc.)
tls-native-roots = ["tonic/tls-native-roots"]

# Use Mozilla's root certificates (embedded in binary)
# Best for scratch/distroless images that have no system CA certificates
tls-webpki-roots = ["kube/webpki-roots", "tonic/tls-webpki-roots"]

[dev-dependencies]
prost = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.14", features = ["channel", "transport"] }
tonic-prost = "0.14"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build = { version = "0.14", optional = true }

[[example]]
name = "greeter-server"
path = "examples/greeter-server.rs"
required-features = ["examples"]

[[example]]
name = "greeter-client"
path = "examples/greeter-client.rs"
required-features = ["examples"]
